--- a/variables.scss
+++ b/variables.scss
@@ -10,3 +10,5 @@ $light-gray: hsl(229, 24%, 87%);
 $magnolia: hsl(217, 100%, 97%);
 $alabaster: hsl(231, 100%, 99%);
 $white: hsl(0, 0%, 100%);
+
+$white: hsl(0, 0%, 100%);
